Handle multiple initialStates