@@ -4,22 +4,23 @@ import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 
 import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 public class Structure {
     final ArrayList<State> states;
-    private final String initialState;
+    private final ArrayList<String> initialStates;
 
     public Structure(Object input) {
         JSONObject jsonObject =  (JSONObject) input;
 
-        initialState = (String) jsonObject.get("initialState");
+        initialStates = State.toStringArrayList(jsonObject.get("initialStates"));
         states = State.cast((JSONArray) jsonObject.get("states"));
 
         if (!initialStateExist()) {
             throw new IllegalArgumentException(
                     String.format(
                             "Initial state %s not described in file %s",
-                            initialState,
+                            initialStates,
                             Utils.PATHFILE
                     )
             );
@@ -28,15 +29,15 @@ public class Structure {
 
     private boolean initialStateExist() {
         return states.stream()
-                .filter(state -> state.getName().equals(initialState))
-                .toList()
-                .size() == 1;
+                .map(State::getName)
+                .collect(Collectors.toList())
+                .containsAll(initialStates);
     }
 
     @Override
     public String toString() {
         return "Structure:" + "\n" +
-                "  | initialState: " + initialState + "\n" +
+                "  | initialState: " + initialStates + "\n" +
                 "  | states: " + states ;
     }
 }
